# rust-actix

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/controllers/: index.rs
server/src/core/: extractors.rs
server/src/routes/: index.rs  mod.rs
server/src/utils/: mod.rs
