[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macros = { path="../macros" }
actix-web = "^3"
actix-http="^2"
serde="^1.0"
mime='^0.3'
serde_json="^1.0"
futures="0.3.15"
futures-util="0.3.15"
log="*"